--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "cookie": "^0.4.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-redux": "^8.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.1.1",
+    "redux": "^4.2.0",
+    "yarn": "^1.22.18"
   },
   "scripts": {
     "start": "react-scripts start",
